[tool.poetry]
name = "conversationagent"
version = "0.1.0"
description = "Langchain conversation agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
werkzeug = "^3.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
