[tool.poetry]
name = "conversationagent"
version = "0.1.0"
description = "Langchain conversation agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
werkzeug = "^3.0.4"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-session = "^0.8.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
